[package]
description = "A fzf-like library for terminal applications"
name = "termenu"
version = "1.0.2"
edition = "2021"
license = "MIT"
authors = ["sshelll <shaojiale.gitignore@icloud.com>"]
repository = "https://github.com/sshelll/termenu"

[dependencies]
crossterm = "0.28"
colored = "2.1.0"
fuzzy-matcher = "0.3.7"
once_cell = "1.19.0"
